samples/_failures_safe/1761790040_6e3a91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62901679.c: In function ‘main’:
./samples/SAFE/__tmp_62901679.c:146:44: error: expected ‘)’ at end of input
  146 |         double det = compute_determinant(&a
      |                                         ~  ^
      |                                            )
./samples/SAFE/__tmp_62901679.c:146:9: error: expected declaration or statement at end of input
  146 |         double det = compute_determinant(&a
      |         ^~~~~~
./samples/SAFE/__tmp_62901679.c:146:9: error: expected declaration or statement at end of input
